--- a/7. 코로나 이후의 중국인 관광객 추이.ipynb
+++ b/7. 코로나 이후의 중국인 관광객 추이.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4   마카오    2506      2     0     17      45    2570"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[67 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "max    916950.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
        "66      교포     0    0   0      0  15526  15526"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "67"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "66        교포       0     0     0      0  15526   15526"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,6 +1485,136 @@
    "source": [
     "kto_201901_country"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "인덱스 이상함. reset_index -> 인덱스가 0부터 순차적으로 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국적</th>\n",
+       "      <th>관광</th>\n",
+       "      <th>상용</th>\n",
+       "      <th>공용</th>\n",
+       "      <th>유학/연수</th>\n",
+       "      <th>기타</th>\n",
+       "      <th>계</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>일본</td>\n",
+       "      <td>198805</td>\n",
+       "      <td>2233</td>\n",
+       "      <td>127</td>\n",
+       "      <td>785</td>\n",
+       "      <td>4576</td>\n",
+       "      <td>206526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>대만</td>\n",
+       "      <td>86393</td>\n",
+       "      <td>74</td>\n",
+       "      <td>22</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1285</td>\n",
+       "      <td>87954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>홍콩</td>\n",
+       "      <td>34653</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1092</td>\n",
+       "      <td>35896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>마카오</td>\n",
+       "      <td>2506</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>태국</td>\n",
+       "      <td>34004</td>\n",
+       "      <td>37</td>\n",
+       "      <td>199</td>\n",
+       "      <td>96</td>\n",
+       "      <td>6998</td>\n",
+       "      <td>41334</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    국적      관광    상용   공용  유학/연수    기타       계\n",
+       "0   일본  198805  2233  127    785  4576  206526\n",
+       "1   대만   86393    74   22    180  1285   87954\n",
+       "2   홍콩   34653    59    2     90  1092   35896\n",
+       "3  마카오    2506     2    0     17    45    2570\n",
+       "4   태국   34004    37  199     96  6998   41334"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kto_201901_country = kto_201901_country.reset_index(drop=True)\n",
+    "kto_201901_country.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
