--- a/7-2. 코로나 이후 중국인 관광객 추이.ipynb
+++ b/7-2. 코로나 이후 중국인 관광객 추이.ipynb
@@ -163,24 +163,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from matplotlib import font_manager, rc\n",
+    "import platform \n",
+    "\n",
+    "if platform.system() == 'Windows': \n",
+    "    path = 'c:/Windows/Fonts/malgun.ttf'\n",
+    "    font_name = font_manager.FontProperties(fname=path).get_name()\n",
+    "    rc('font', family=font_name)\n",
+    "elif platform.system() == 'Darwin':\n",
+    "    rc('font', family='AppleGothic')\n",
+    "else: \n",
+    "    print('Check your OS system')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국적</th>\n",
+       "      <th>관광</th>\n",
+       "      <th>상용</th>\n",
+       "      <th>공용</th>\n",
+       "      <th>유학/연수</th>\n",
+       "      <th>기타</th>\n",
+       "      <th>계</th>\n",
+       "      <th>전년동기</th>\n",
+       "      <th>성장률(%)</th>\n",
+       "      <th>구성비(%)</th>\n",
+       "      <th>기준년월</th>\n",
+       "      <th>대륙</th>\n",
+       "      <th>관광객비율(%)</th>\n",
+       "      <th>전체비율(%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>중국</td>\n",
+       "      <td>40425</td>\n",
+       "      <td>11930</td>\n",
+       "      <td>55</td>\n",
+       "      <td>2751</td>\n",
+       "      <td>36091</td>\n",
+       "      <td>91252</td>\n",
+       "      <td>93007</td>\n",
+       "      <td>-1.9</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>44.3</td>\n",
+       "      <td>4.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>중국</td>\n",
+       "      <td>60590</td>\n",
+       "      <td>7907</td>\n",
+       "      <td>68</td>\n",
+       "      <td>29546</td>\n",
+       "      <td>42460</td>\n",
+       "      <td>140571</td>\n",
+       "      <td>127979</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>2010-02</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>6.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>중국</td>\n",
+       "      <td>50330</td>\n",
+       "      <td>13549</td>\n",
+       "      <td>174</td>\n",
+       "      <td>14924</td>\n",
+       "      <td>62480</td>\n",
+       "      <td>141457</td>\n",
+       "      <td>111915</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>2010-03</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>중국</td>\n",
+       "      <td>84252</td>\n",
+       "      <td>13306</td>\n",
+       "      <td>212</td>\n",
+       "      <td>2199</td>\n",
+       "      <td>47711</td>\n",
+       "      <td>147680</td>\n",
+       "      <td>107872</td>\n",
+       "      <td>36.9</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>2010-04</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>57.1</td>\n",
+       "      <td>9.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>중국</td>\n",
+       "      <td>89056</td>\n",
+       "      <td>12325</td>\n",
+       "      <td>360</td>\n",
+       "      <td>2931</td>\n",
+       "      <td>49394</td>\n",
+       "      <td>154066</td>\n",
+       "      <td>86392</td>\n",
+       "      <td>78.3</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>2010-05</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>57.8</td>\n",
+       "      <td>10.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     국적     관광     상용   공용  유학/연수     기타       계    전년동기  성장률(%)  구성비(%)  \\\n",
+       "17   중국  40425  11930   55   2751  36091   91252   93007    -1.9    16.0   \n",
+       "77   중국  60590   7907   68  29546  42460  140571  127979     9.8    22.0   \n",
+       "137  중국  50330  13549  174  14924  62480  141457  111915    26.4    18.4   \n",
+       "197  중국  84252  13306  212   2199  47711  147680  107872    36.9    20.2   \n",
+       "257  중국  89056  12325  360   2931  49394  154066   86392    78.3    21.1   \n",
+       "\n",
+       "        기준년월   대륙  관광객비율(%)  전체비율(%)  \n",
+       "17   2010-01  아시아      44.3      4.6  \n",
+       "77   2010-02  아시아      43.1      6.9  \n",
+       "137  2010-03  아시아      35.6      5.7  \n",
+       "197  2010-04  아시아      57.1      9.5  \n",
+       "257  2010-05  아시아      57.8     10.1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "df_filter = df[df.국적=='중국']\n",
+    "df_filter.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "plt."
+   ]
   },
   {
    "cell_type": "code",
