--- a/7-2. 코로나 이후 중국인 관광객 추이.ipynb
+++ b/7-2. 코로나 이후 중국인 관광객 추이.ipynb
@@ -397,7 +397,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c_list = ['중국', '일본', '대만', '미국', '홍콩']\n",
+    "\n",
+    "for country in c_list:\n",
+    "    condition = (df['국적']==country)\n",
+    "    df_filter = df[condition]\n",
+    "    \n",
+    "    plt.figure(figsize=(12,4))\n",
+    "\n",
+    "    plt.plot(df_filter['기준년월'], df_filter['관광'])\n",
+    "    \n",
+    "    plt.xlabel('기준년월')\n",
+    "    plt.ylabel('관광객수')\n",
+    "    plt.xticks(['2010-01','2011-01','2012-01','2013-01','2014-01','2015-01','2016-01','2017-01','2018-01','2019-01','2020-01'])\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "code",
