--- a/7-2. 코로나 이후 중국인 관광객 추이.ipynb
+++ b/7-2. 코로나 이후 중국인 관광객 추이.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "257  2010-05  아시아      57.8     10.1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -476,6 +476,207 @@
     "    plt.ylabel('관광객수')\n",
     "    plt.xticks(['2010-01','2011-01','2012-01','2013-01','2014-01','2015-01','2016-01','2017-01','2018-01','2019-01','2020-01'])\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국적</th>\n",
+       "      <th>관광</th>\n",
+       "      <th>상용</th>\n",
+       "      <th>공용</th>\n",
+       "      <th>유학/연수</th>\n",
+       "      <th>기타</th>\n",
+       "      <th>계</th>\n",
+       "      <th>전년동기</th>\n",
+       "      <th>성장률(%)</th>\n",
+       "      <th>구성비(%)</th>\n",
+       "      <th>기준년월</th>\n",
+       "      <th>대륙</th>\n",
+       "      <th>관광객비율(%)</th>\n",
+       "      <th>전체비율(%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>일본</td>\n",
+       "      <td>202825</td>\n",
+       "      <td>1750</td>\n",
+       "      <td>89</td>\n",
+       "      <td>549</td>\n",
+       "      <td>3971</td>\n",
+       "      <td>209184</td>\n",
+       "      <td>237816</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>22.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>대만</td>\n",
+       "      <td>35788</td>\n",
+       "      <td>41</td>\n",
+       "      <td>17</td>\n",
+       "      <td>37</td>\n",
+       "      <td>516</td>\n",
+       "      <td>36399</td>\n",
+       "      <td>37425</td>\n",
+       "      <td>-2.7</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>98.3</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>홍콩</td>\n",
+       "      <td>13874</td>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>595</td>\n",
+       "      <td>14545</td>\n",
+       "      <td>25207</td>\n",
+       "      <td>-42.3</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>95.4</td>\n",
+       "      <td>1.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>마카오</td>\n",
+       "      <td>554</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>554</td>\n",
+       "      <td>955</td>\n",
+       "      <td>-42.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>태국</td>\n",
+       "      <td>13374</td>\n",
+       "      <td>39</td>\n",
+       "      <td>13</td>\n",
+       "      <td>53</td>\n",
+       "      <td>4335</td>\n",
+       "      <td>17814</td>\n",
+       "      <td>13947</td>\n",
+       "      <td>27.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2010-01</td>\n",
+       "      <td>아시아</td>\n",
+       "      <td>75.1</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    국적      관광    상용  공용  유학/연수    기타       계    전년동기  성장률(%)  구성비(%)  \\\n",
+       "0   일본  202825  1750  89    549  3971  209184  237816   -12.0    36.7   \n",
+       "1   대만   35788    41  17     37   516   36399   37425    -2.7     6.4   \n",
+       "2   홍콩   13874    55   0     21   595   14545   25207   -42.3     2.6   \n",
+       "3  마카오     554     0   0      0     0     554     955   -42.0     0.1   \n",
+       "4   태국   13374    39  13     53  4335   17814   13947    27.7     3.1   \n",
+       "\n",
+       "      기준년월   대륙  관광객비율(%)  전체비율(%)  \n",
+       "0  2010-01  아시아      97.0     22.9  \n",
+       "1  2010-01  아시아      98.3      4.0  \n",
+       "2  2010-01  아시아      95.4      1.6  \n",
+       "3  2010-01  아시아     100.0      0.1  \n",
+       "4  2010-01  아시아      75.1      1.5  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016-10    60\n",
+       "2015-04    60\n",
+       "2016-12    60\n",
+       "2016-11    60\n",
+       "2017-02    60\n",
+       "           ..\n",
+       "2016-05    60\n",
+       "2010-07    60\n",
+       "2018-02    60\n",
+       "2013-06    60\n",
+       "2015-08    60\n",
+       "Name: 기준년월, Length: 125, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.기준년월.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 년도/ 월 분리\n",
+    "df.년도 = df.기준년월.str.slice(0,4)\n",
+    "df.월 = ㅇ"
    ]
   },
   {
